# quickjs-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  quickjs.patch
example/: c_api_example.cpp  c_api_example.h  cpp_api_example.cpp  cpp_api_example.h  hello.js  pi.js
quickjs/: quickjs.h
quickjscpp/: quickjscpp.cpp  quickjscpp.h
